--- a/packages/datagovmy-nextra/style.css
+++ b/packages/datagovmy-nextra/style.css
@@ -846,11 +846,6 @@ input[type="search"]::-webkit-search-results-decoration {
   width: -moz-fit-content;
   width: fit-content;
 }
-.w-fit {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-}
 .w-full {
   width: 100%;
 }
@@ -1025,11 +1020,6 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .gap-y-8 {
   row-gap: 2rem;
-}
-.space-x-1 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.25rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
 }
 .space-x-1 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
@@ -3516,8 +3506,17 @@ input[type="search"]::-webkit-search-results-decoration {
   }
 }
 @media (min-width: 1024px) {
-  .lg\:gap-x-6 {
-    column-gap: 1.5rem;
+  .lg\:right-6 {
+    right: 1.5rem;
+  }
+  .lg\:top-6 {
+    top: 1.5rem;
+  }
+  .lg\:max-w-3xl {
+    max-width: 48rem;
+  }
+  .lg\:max-w-\[400px\] {
+    max-width: 400px;
   }
   .lg\:px-6 {
     padding-left: 1.5rem;
