--- a/packages/datagovmy-ui/src/styles/globals.css
+++ b/packages/datagovmy-ui/src/styles/globals.css
@@ -18,19 +18,19 @@
   }
 
   h2 {
-    @apply font-header text-3xl font-bold leading-[38px] dark:text-white;
+    @apply font-header text-3xl font-bold leading-[38px] text-black dark:text-white;
   }
 
   h3 {
-    @apply font-header text-2xl font-bold dark:text-white;
+    @apply font-header text-2xl font-bold text-black dark:text-white;
   }
 
   h4 {
-    @apply font-header text-xl font-bold dark:text-white;
+    @apply font-header text-xl font-bold text-black dark:text-white;
   }
 
   h5 {
-    @apply text-lg font-bold dark:text-white;
+    @apply text-lg font-bold text-black dark:text-white;
   }
 
   h6 {
@@ -46,6 +46,10 @@
 
   textarea {
     @apply resize-none;
+  }
+
+  html {
+    -webkit-tap-highlight-color: transparent;
   }
 }
 
