--- a/packages/datagovmy-nextra/style.css
+++ b/packages/datagovmy-nextra/style.css
@@ -2331,6 +2331,21 @@ article.nextra-body-typesetting-article .subheading-anchor + a:hover {
 .ai li > p {
   display: inline;
 }
+.ai p {
+  line-height: 1.75rem;
+}
+.ai a {
+  --tw-text-opacity: 1;
+  color: rgba(37, 99, 235, var(--tw-text-opacity));
+  text-underline-position: from-font;
+}
+.ai a:hover {
+  text-decoration-line: underline;
+}
+:is(html[class~="dark"] .ai a) {
+  --tw-text-opacity: 1;
+  color: rgba(62, 122, 255, var(--tw-text-opacity));
+}
 html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -3558,8 +3573,14 @@ input[type="search"]::-webkit-search-results-decoration {
   }
 }
 @media (min-width: 640px) {
+  .sm\:block {
+    display: block;
+  }
   .sm\:flex {
     display: flex;
+  }
+  .sm\:hidden {
+    display: none;
   }
   .sm\:px-0 {
     padding-left: 0;
